# log2nmea

./: .gitignore  CMakeLists.txt  README.md  config.h.in  install.nsi  license.txt  log2nmea.cpp  log2nmea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: macintosh.yml  windows.yml
3rd/: config.txt
bat/: log2nmea.bat
resources/: log2nmea.icns  log2nmea.rc
